exports[`actions > index > bundle addBundle should work 1`] = `
Object {
  "type": "add bundle",
}
`;

exports[`actions > index > bundle deleteBundle should work 1`] = `
Object {
  "payload": 1,
  "type": "delete bundle",
}
`;

exports[`actions > index > bundle deleteBundle should work 2`] = `
Object {
  "type": "increment outstanding requests",
}
`;

exports[`actions > index > bundle deleteBundle should work 3`] = `
Array [
  Object {
    "type": "decrement outstanding requests",
  },
]
`;

exports[`actions > index > bundle saveBundle should work 1`] = `
Object {
  "payload": Object {
    "id": 1,
  },
  "type": "set bundle",
}
`;

exports[`actions > index > bundle saveBundle should work 2`] = `
Object {
  "type": "increment outstanding requests",
}
`;

exports[`actions > index > bundle saveBundle should work 3`] = `
Array [
  Object {
    "type": "decrement outstanding requests",
  },
]
`;

exports[`actions > index > bundle setBundle should work 1`] = `
Object {
  "type": "set bundle",
}
`;

exports[`actions > index > bundle setBundles should work 1`] = `
Object {
  "type": "set bundles",
}
`;

exports[`actions > index > feed setFeeds should work 1`] = `
Object {
  "type": "set feeds",
}
`;

exports[`actions > index > login / logout login should work 1`] = `
Object {
  "type": "log in",
}
`;

exports[`actions > index > login / logout logout should work 1`] = `
Object {
  "type": "log out",
}
`;

exports[`actions > index > map state setActiveTrips should work 1`] = `
Object {
  "type": "set active trips",
}
`;

exports[`actions > index > map state setMapState should work 1`] = `
Object {
  "type": "set map state",
}
`;

exports[`actions > index > map state setUser should work 1`] = `
Object {
  "type": "set user",
}
`;
